hard-gists/2213915/run.log
=== Docker Run Log for 2213915 ===
Started at: Mi 29. Okt 13:01:24 CET 2025

[2025-10-29 13:01:25] START: Running container for 2213915
[2025-10-29 13:01:25] SUCCESS: Container 28799afbaa6111440be474f12eb88a3d69f832cbb90f28c83a8869c9bf9debed started for 2213915
=== Container logs for 2213915 ===
  File "/snippet.py", line 121
    except OSError, exc:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2213915 ===
[2025-10-29 13:01:27] INFO: Container 28799afbaa6111440be474f12eb88a3d69f832cbb90f28c83a8869c9bf9debed has stopped
